--- a/src/App.css
+++ b/src/App.css
@@ -3,30 +3,61 @@
 }
 
 .App-logo {
-  height: 40vmin;
+  height: 20vmin;
   pointer-events: none;
 }
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+    animation: App-logo-spin infinite 5s linear;
   }
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: darkolivegreen;
+  min-height: 50vh;
   display: flex;
+  font-style:italic;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+  font-family: Lobster;
 }
 
 .App-link {
   color: #61dafb;
 }
+
+h1,h3{
+  font-family: Lobster;
+  font-style:italic;
+  font-color:darkgreen;
+}
+
+p{
+  text-align: center;
+  font-size: small;
+  font-color:darkgreen;
+}
+
+
+.card{
+  width: 200px;
+  height: auto;
+  border-style: solid;
+  background-color: darkseagreen;
+  border-color: darkslategrey;
+  border-radius: 10px;
+  margin:1%
+}
+.card img{
+  width: 50%;
+  border-radius: 50%;
+}
+
+
 
 @keyframes App-logo-spin {
   from {
