--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
-    animation: App-logo-spin infinite 5s linear;
+    animation: App-logo-spin infinite 0s linear;
   }
 }
 
@@ -36,6 +36,16 @@ h1,h3{
   font-color:darkgreen;
 }
 
+button{
+  background-color: darkseagreen;
+}
+
+footer{
+  font-family: Lobster;
+  font-style:italic;
+  color:white;
+  background-color: darkolivegreen;
+}
 
 
 @keyframes App-logo-spin {
