Add css for buttons Prev and Next and use same buttons for Pagination of Characters and Episodes

--- a/src/css_components/CharacterCard.css
+++ b/src/css_components/CharacterCard.css
@@ -11,8 +11,9 @@
 
 }
 .card img{
-    width: 50%;
     border-radius: 50%;
+    height: 130px;
+    width: 124px;
 }
 .card p{
     text-align: center;
