--- a/src/css_components/EpisodeCard.css
+++ b/src/css_components/EpisodeCard.css
@@ -10,16 +10,12 @@
     margin:1%;
     color:darkslategrey;
     box-shadow: 1px 2px 8px #666;
+    padding: 10px 10px 10px 10px;
 
 }
 
 .episode-card div{
     display: flex;
     flex-direction: column;
-
-}
-
-.episode-card div a{
-
 
 }
