modify and implement component EpisodeCardDetails in routes. Modify Character and Episode Card to show fewer Information than in CardDetails to improve UX. Create CSS for EpisodeCardDetails

--- a/src/css_components/Contact.css
+++ b/src/css_components/Contact.css
@@ -9,3 +9,9 @@
     height: 260px;
     width: 248px;
 }
+
+.github-card h3{
+    font-style: italic;
+    font-weight: normal;
+    color:black;
+}
