--- a/src/css_components/CharacterCard.css
+++ b/src/css_components/CharacterCard.css
@@ -15,6 +15,9 @@
     height: 130px;
     width: 124px;
 }
+.character-card h3{
+    color:darkslategrey;
+}
 .character-card p{
     text-align: center;
     font-size: medium;
