--- a/src/css_components/Footer.css
+++ b/src/css_components/Footer.css
@@ -1,10 +1,14 @@
 .footer{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     position: fixed;
     left: 0;
     bottom: 0;
     width: 100%;
-    font-family: Lobster,serif;
+    font-family: serif;
     font-style:italic;
     color:white;
     background-color: darkolivegreen;
+
 }
